--- a/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.css
@@ -1,7 +1,17 @@
+h2{
+    margin-top: 1rem;
+}
+
 .video{
-    margin :5.5rem;
+    margin :5rem;
     /* margin-left: auto;
     margin-right: auto ; */
+}
+.description{
+    background-color: #EEEEEE;
+    padding: 1rem;
+    border-radius: 20px;
+    margin-bottom: 1rem;
 }
 .col-md-8{
     display: flex;
@@ -9,16 +19,22 @@
     align-items: center;
 }
 .col-md-4{
+    margin-top: 1.9rem;
 padding: 3rem;
 }
 .list-group{
     max-height: 30rem;
     margin-bottom: 10px;
     /* overflow:scroll; */
-    -webkit-overflow-scrolling: touch;
+    /* -webkit-overflow-scrolling: touch; */
+    box-shadow: 1px 1px 6px black;
+}
+.list-group-item:hover{
+    background-color: #EEEEEE;
 }
 .row{
-    background-color: #EEEEEE;
+    /* background-color: #EEEEEE; */
+    background-color: white;
     margin-bottom: 0;
 }
 .text{
