login button fixed

--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -61,7 +61,7 @@
         <a class="nav-link" href="sign-up">SignUp</a>
       </button>
       <button *ngIf="!logInFlag" class="btn btn-outline-success" style="margin: 1%;" (click)="logout()">
-        <a class="nav-link" href="LogOut">LogOut</a>
+        <a class="nav-link" href="">LogOut</a>
       </button>
     </div>
   </div>
