--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -6,7 +6,9 @@
 <!-- <app-footer></app-footer> -->
 <!-- <app-base></app-base> -->
 <!-- <app-all-categories></app-all-categories> -->
-<app-home></app-home>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>   
 <!-- <app-slider2></app-slider2> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-course-page></app-course-page> -->
