--- a/Angular-Components/UpSkillUi/src/app/components/all-categories/all-categories.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/all-categories/all-categories.component.css
@@ -9,17 +9,12 @@ body {
   border: 2px solid #000;
 }
 
-/*.row:after {
-  content: "";
-  display:grid;
-  clear: both;
-} */
 
 .card {
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
   text-align: center;
   background-color: #fff;
   margin: auto;
+  border: transparent;
 }
 .course-img{
   margin: 20px;
@@ -45,10 +40,7 @@ body {
 
 .grid-item {
   background-color: #fff;
-  /* border: 1px solid #fff; */
-  /* border: 2px solid red; */
   padding: 20px;
-  /* width: 400px; */
   text-align: center;
 }
 .grid-item:hover{
