--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -3,13 +3,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/images/carosel.jpg" style="width: auto; height: 300px;" class="d-block w-100" alt="...">
+      <img src="assets/images/scw.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/carosel.jpg" style="width: auto; height: 300px;" class="d-block w-100" alt="...">
+      <img src="assets/images/banner11.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/carosel.jpg" style="width: auto; height: 300px;" class="d-block w-100" alt="...">
+      <img src="assets/images/banner15.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
