--- a/Angular-Components/UpSkillUi/src/app/components/sign-up/sign-up.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/sign-up/sign-up.component.html
@@ -13,7 +13,7 @@
     <input type="submit" value="Submit"  />
 </form>
  -->
-{{user|json}}
+<!-- {{user|json}} -->
 <div class="container-main">
     <form #f1="ngForm" action="" class="" (ngSubmit)="addUser()">
         <div class="login-container">
