--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -35,7 +35,8 @@
         <h1 class="modal-title fs-5" id="exampleModalLabel"><a href="" class="title-hyperlink">{{cor.title}}</a></h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="row">
+      <div class="modal-body col-md-4">
         <div class="image-container">
           <img src="assets/images/{{cor.thumbnailUrl}}" alt="NO-Image" class="course-image">
           <div class="btn-container">
@@ -68,6 +69,7 @@
             </ul>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
