all-categories modified

--- a/Angular-Components/UpSkillUi/src/app/components/cart/cart.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/cart/cart.component.html
@@ -98,7 +98,7 @@
     <div class="btn-container">
         <div class="card">
             <p class="card-text total"> Total: ₹</p>
-            <div><button class="btn btn-success btns enroll" style="width: 150px; height: 60px;">Enroll All</button></div>
+            <!-- <div><button class="btn btn-success btns enroll" style="width: 150px; height: 60px;">Enroll All</button></div> -->
             <div><button class="btn btn-danger btns empty-cart" style="width: 150px;" (click)="emptyCart()">Empty Cart</button></div>
             <div><button class="btn btn-primary btns shop-more" style="width: 150px;" routerLink="/">Shop More</button></div>
         </div>
