--- a/Angular-Components/UpSkillUi/src/app/components/all-categories/all-categories.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/all-categories/all-categories.component.css
@@ -47,10 +47,28 @@ body {
   background-color: #fff;
   /* border: 1px solid #fff; */
   /* border: 2px solid red; */
-  padding: 20px;
+  /* padding: 20px; */
   /* width: 400px; */
   text-align: center;
+  margin: 2rem;
+  border: none;
+  box-shadow: 2px 2px 10px gray;
+  border-radius: 1rem;
 }
 .grid-item:hover{
   transform: scale(1.05);
+}
+
+.catimg{
+  width: 12rem;
+  height: 10rem;
+  border-radius: 1rem;
+}
+.container-main{
+  padding-left: 3rem;
+  display: grid;
+  gap: 	0px;
+}
+h2{
+  margin-left: 2rem;
 }
