--- a/Angular-Components/UpSkillUi/src/app/components/features2/features2.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/features2/features2.component.css
@@ -4,12 +4,16 @@
 .card{
     /* width: 80%; */
     /* padding-left: 3rem; */
+    text-align: center;
+    /* border: none; */
+    
 }
 .col{
     padding: 2rem;
 }
 img{
-    width: 40%;
+    width: 8rem;
+    height: 5rem;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2rem;
