course page routes

--- a/Angular-Components/UpSkillUi/src/app/components/cart/cart.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/cart/cart.component.html
@@ -88,7 +88,7 @@
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         <div class="btn-container1">
                             <button class="btn btn-danger btns delete" (click)="removeItem(item.courseId)">Delete</button>
-                            <button class="btn btn-success btns enroll enroll1">Enroll</button>
+                            <button class="btn btn-success btns enroll enroll1" (click)="enroll(item.courseId)">Enroll</button>
                         </div>
                     </div>
                 </div>
