--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -44,7 +44,7 @@
               <Button class="cart-button btns" (click)="addToCart(cor)"  data-bs-dismiss="modal">Add to cart</Button>
             </div>
             <div class="bts">
-              <Button class="more-detail btns">More details</Button>
+              <a href="course-page/{{cor.courseId}}"><Button class="more-detail btns">Course Page</Button></a>
             </div>
           </div>
         </div>
