Review component added

--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- <app-footer></app-footer> -->
 <!-- <app-base></app-base> -->
 <!-- <app-all-categories></app-all-categories> -->
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 <!-- <app-slider2></app-slider2> -->
 <!-- <router-outlet></router-outlet> -->
 
@@ -14,7 +14,7 @@
 <!-- <app-navbargoodlooking></app-navbargoodlooking> -->
 <!-- <app-course-page></app-course-page> -->
 <!-- <app-home-page></app-home-page> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-mentor-home></app-mentor-home> -->
 <!-- <app-footer></app-footer> -->
 <!-- <app-sign-up></app-sign-up> -->
