--- a/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.css
@@ -1,19 +1,34 @@
 .navbar-brand{
     font-weight: bold;
     font-size: 1.5rem;
-    color: white;
+    color: black;
 }
 .nav-item{
     padding-right: 2rem;
     
 }
 .nav-link{
-    color: white;
+    color: black;
 }
 .bg-lightt{
-    /* background-color: #00ADB5; */
-    background-image: url('gradient1.svg');
-    background-position: center;
+    background-color: white
+    /* background-image: url('gradient1.svg'); */
+    
+    /* background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
+}
+/* #fixedButton{
+    position: fixed;
+    bottom: 0px;
+    right: 0px; 
+    
+} */
+
+.cart-img{
+    height: 25px;
+    width: 25px;
+    margin-top: 0.6rem;
+    /* margin-left: 1rem; */
+    padding: 0.1rem;
 }
