--- a/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
@@ -27,7 +27,7 @@
 
 <nav class="navbar navbar-expand-lg bg-lightt">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">  <img src="./assets/images/bar-chart-white.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <a class="navbar-brand" href="#">  <img src="./assets/images/bar-chart.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         UpSkill</a>
       
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -41,18 +41,18 @@
           <li class="nav-item">
             <a class="nav-link" href="/profile">Profile</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="logInFlag">
             <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item" *ngIf="!logInFlag">
+            <!-- <button *ngIf="!logInFlag" class="btn btn-outline-success" style="margin: 1%;" > -->
+              <a class="nav-link" href="LogOut" (click)="logout()">LogOut</a>
           </li>
           <li><button style="background-color: transparent; color: white; border: 1px solid transparent;" routerLink="cart">
             <div class="badge bg-danger" style="font-size: 10px;">{{totalItem}}</div>
             <img src="assets/images/cart.png" class="cart-img" alt="">
           </button></li>
-          <li>
-            <button *ngIf="!logInFlag" class="btn btn-outline-success" style="margin: 1%;" (click)="logout()">
-              <a class="nav-link" href="LogOut">LogOut</a>
-            </button>
-          </li>
+          
         </ul>
       </div>
     </div>
