--- a/Angular-Components/UpSkillUi/src/app/components/email-service/email-service.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/email-service/email-service.component.html
@@ -1,6 +1,8 @@
-<!-- Modal -->
-<button type="button" id="fixedbutton" style="border-radius: 50%; " class="btn btn-outline-success contact-us" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  <i class="fa fa-commenting-o fa-2x" aria-hidden="true"></i>
+<!-- Modal --> 
+<button type="button" id="fixedbutton" class="btn contact-us" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  <!-- <i class="fa fa-commenting-o fa-2x" aria-hidden="true"></i> -->
+
+  <img src="assets/images/speech-bubble.png" alt="">
 </button>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
