--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -59,7 +59,8 @@
             </div>
             <span class="course-duration">Total {{cor.duration}} hours</span>
             <div>
-              {{cor.description}}
+              {{cor.description}} 
+              <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque debitis cupiditate enim, dolorum neque, aut dignissimos architecto asperiores delectus, vel quidem perspiciatis odit quasi voluptas rem adipisci impedit facere sit. -->
             </div>
             <ul>
               <li>Create their own Python Programs</li>
