--- a/Angular-Components/UpSkillUi/src/app/components/email-service/email-service.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/email-service/email-service.component.css
@@ -1,5 +1,11 @@
 #fixedbutton {
     position: fixed;
     bottom: 2%;
-    right: 2%; 
+    left: 2%; 
+    border-radius: 50%;
+}
+
+img{
+    width: 50px;
+    height: 50px;
 }
