--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -18,7 +18,7 @@
 <!-- <app-home-page></app-home-page> -->
 <router-outlet></router-outlet>
 <!-- <app-mentor-home></app-mentor-home> -->
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
 <!-- <app-sign-up></app-sign-up> -->
 
 
