--- a/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
@@ -1,12 +1,7 @@
-<<<<<<< HEAD
-=======
-<app-header></app-header>
-<!-- <navbargoodlooking></navbargoodlooking> -->
->>>>>>> 5c45866260642bc24d8c12138f016b3097fe8a0d
 <!-- <div class="row container">
     <div class=" col col-md-1"></div> -->
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 
 <!-- </div> -->
 
