--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -21,6 +21,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<app-enrolled-courses></app-enrolled-courses>
 
 <app-features2></app-features2>
 
