--- a/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.html
@@ -37,7 +37,7 @@
 
             <div class="reviews" *ngFor="let r of reviews">
                 <span style="margin: 0;font-weight:bold">{{r.author}}</span><span style="margin-left: 1rem;font-size:small">{{r.date}}</span>
-                <p style="margin: 0;">{{r.rating}}<img style="width:1rem;margin-bottom:0.2rem" src="./assets/images/star.png" alt=""></p>
+                <p style="margin: 0;">{{r.rating}}<img style="width:1rem;margin-bottom:0.2rem" src="./assets/images/star2.png" alt=""></p>
                 <p>{{r.description}}</p>
                 <hr>
             </div>
@@ -49,7 +49,8 @@
             <a (click)="showVideo(v)" style="cursor: pointer;"><li class="list-group-item">{{v.title}}</li></a>
         </div>
     </ol>
+    <div *ngIf="roleId"><a href="add-video"><button class="btn btn-outline-primary"> <i class="fa fa-plus-circle" aria-hidden="true"></i> Add Video</button></a>   </div>
     </div>
 </div>
-d
+
 
