--- a/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
@@ -38,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/aboutUs">About Us</a>
           </li>
+          <li class="nav-item" *ngIf="mentor">
+            <a class="nav-link" href="/add-course">Dashboard</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/profile">Profile</a>
           </li>
