--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -1,4 +1,4 @@
-<h2><b>Top Courses</b></h2>
+<div class="container"><h2><b>Top Courses</b></h2>
 
 <div class="content-section implementation carousel-demo">
   <div class="card">
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-
+</div>
 
 
 
