--- a/Angular-Components/UpSkillUi/src/app/components/uploaded-courses/uploaded-courses.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/uploaded-courses/uploaded-courses.component.html
@@ -16,17 +16,12 @@
 
 
         </div>
-    
-
-
-
-
 
     <div class="col-md-3">
         <div class="card" >
             <div class="card-body" style="text-align: center;">
                 <a href="add-course"> <i id="" class="fa fa-plus-circle fa-5x" aria-hidden="true"></i></a>
-                <h5 class="card-title">Add Another Course</h5>
+                <h5 class="card-title">Add Course</h5>
 
             </div>
         </div>
