styling changes and testimonials-comp added

--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -3,7 +3,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/images/scw.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
+      <img src="assets/images/banner11.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="assets/images/banner11.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
@@ -29,3 +29,4 @@
 
 <app-all-categories></app-all-categories>
 <app-email-service></app-email-service>
+<app-testimonials></app-testimonials>
