--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -1,6 +1,7 @@
+<div class="" style="padding:2%">
 <h2><b>Top Courses</b></h2>
 
-<div class="content-section implementation carousel-demo">
+<div class=" content-section implementation carousel-demo">
   <div class="card">
       <p-carousel [value]="courses" styleClass="custom-carousel" [numVisible]="6" [numScroll]="6"
       [circular]="true" [autoplayInterval]="0" [responsiveOptions]="responsiveOptions">
@@ -18,18 +19,7 @@
       </p-carousel>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 
 
