--- a/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
@@ -25,7 +25,7 @@
     </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-lg bg-lightt">
+<nav class="navbar navbar-expand-lg bg-lightt navbar-fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">  <img src="./assets/images/bar-chart.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         UpSkill</a>
