enrolled secured now

--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -6,7 +6,7 @@
       <img src="assets/images/fbanner.png" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/fban2.png" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
+      <img src="assets/images/banner11.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="assets/images/banner15.jpg" style="width: auto; height: 400px;" class="d-block w-100" alt="...">
