--- a/Angular-Components/UpSkillUi/src/app/components/testimonials/testimonials.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/testimonials/testimonials.component.html
@@ -68,16 +68,16 @@
                 
                 <div class="user-image">
                     
-            <img src=".\assets\images\dali.jpg" class="rounded-circle" width="80"
+            <img src=".\assets\images\Ramnath.jpg" class="rounded-circle" width="80"
                     >
                     
                 </div>
                 
                 <div class="user-content">
                     
-                    <h5 class="mb-0">Salvador Dali</h5>
-                    <span>Modern Artist</span>
-                    <p>I was a noob, a absolute noob when I joined a drawing masterclass by Dhruv Kanthaliya here on this website. Now after all this success I am and ever will be grateful to Dhruv and this website for all the skills and the money that I have. PS: Van Gogh also used this website</p>
+                    <h5 class="mb-0">Ramnath Nishad</h5>
+                    <span>Corporate Trainer</span>
+                    <p>I was a noob, a absolute noob when I joined a C# masterclass by Dhruv Kanthaliya here on this website. Now after all this success I am and ever will be grateful to Dhruv and this website for all the skills and the money that I have. PS: This is better than StackRoute.</p>
                     
                 </div>
                 
