--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="" style="height: auto; width: 50px;"/></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="" style="height: auto; width: 50px;" /></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -18,16 +19,16 @@
         </li>
 
         <div *ngIf="mentor">
-        <li class="nav-item">
-          <a class="nav-link" href="add-video">Add-Video</a>
-        </li>
-      </div>
-      <div *ngIf="mentor">
+          <li class="nav-item">
+            <a class="nav-link" href="add-video">Add-Video</a>
+          </li>
+        </div>
+        <div *ngIf="mentor">
 
-        <li class="nav-item">
-          <a class="nav-link" href="add-course">Add-Course</a>
-        </li>
-      </div>
+          <li class="nav-item">
+            <a class="nav-link" href="add-course">Add-Course</a>
+          </li>
+        </div>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,7 +37,9 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
